--- a/index.html
+++ b/index.html
@@ -99,4 +99,28 @@
     <section class="content" id="properties">
         <h2>Satılık/Kiralık Emlaklar</h2>
         <div class="properties">
-            <div class="
+            <div class="property">
+                <h3>3+1 Daire</h3>
+                <p>Fiyat: 2.500.000₺</p>
+            </div>
+            <div class="property">
+                <h3>2+1 Daire</h3>
+                <p>Fiyat: 1.800.000₺</p>
+            </div>
+            <div class="property">
+                <h3>Villa</h3>
+                <p>Fiyat: 5.200.000₺</p>
+            </div>
+        </div>
+    </section>
+    <section class="content" id="contact">
+        <h2>İletişim</h2>
+        <p>Email: info@vadiemlak.com</p>
+        <p>Telefon: 0 (555) 578 48 19</p>
+        <p>Adres: İstanbul, Türkiye</p>
+    </section>
+    <footer>
+        &copy; 2025 Vadi Emlak. Tüm hakları saklıdır.
+    </footer>
+</body>
+</html>
