--- a/index.html
+++ b/index.html
@@ -1,126 +1,126 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vadi Emlak Offical | İstanbul Satılık ve Kiralık Gayrimenkuller</title>
-    <meta name="description" content="Vadi Emlak olarak İstanbul'da satılık daire, kiralık konut ve villa seçenekleriyle hayalinizdeki evi bulmanıza yardımcı oluyoruz. En güvenilir emlak ofisi.">
-    
-    <meta name="google-site-verification" content="bvuZ2Ityq15cyCKjx5Bd2Nxj1uWvx-F0wT9cukhWHck" /> 
-    
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f5f5f5;
-        }
-        header {
-            background-color: #2c3e50;
-            color: white;
-            padding: 40px 0;
-            text-align: center;
-        }
-        header h1 {
-            font-size: 3em;
-            margin: 0;
-        }
-        nav {
-            display: flex;
-            justify-content: center;
-            gap: 30px;
-            background-color: #34495e;
-            padding: 15px 0;
-        }
-        nav a {
-            color: white;
-            text-decoration: none;
-            font-weight: bold;
-        }
-        nav a:hover {
-            text-decoration: underline;
-        }
-        .content {
-            max-width: 1200px;
-            margin: 40px auto;
-            padding: 0 20px;
-        }
-        .properties {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 20px;
-        }
-        .property {
-            background-color: white;
-            padding: 15px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-        }
-        footer {
-            background-color: #2c3e50;
-            color: white;
-            text-align: center;
-            padding: 20px 0;
-            margin-top: 40px;
-        }
-        .instagram {
-            margin-top: 10px;
-        }
-        .instagram a {
-            color: #fff;
-            font-weight: bold;
-            text-decoration: none;
-            background-color: #e4405f;
-            padding: 8px 15px;
-            border-radius: 5px;
-        }
-        .instagram a:hover {
-            background-color: #d32f4c;
-        }
-    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Vadi Emlak Offical | İstanbul Satılık ve Kiralık Gayrimenkuller</title>
+    <meta name="description" content="Vadi Emlak olarak İstanbul'da satılık daire, kiralık konut ve villa seçenekleriyle hayalinizdeki evi bulmanıza yardımcı oluyoruz. En güvenilir emlak ofisi.">
+    
+    <meta name="google-site-verification" content="bvuZ2Ityq15cyCKjx5Bd2Nxj1uWvx-F0wT9cukhWHck" /> 
+    
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f5f5f5;
+        }
+        header {
+            background-color: #2c3e50;
+            color: white;
+            padding: 40px 0;
+            text-align: center;
+        }
+        header h1 {
+            font-size: 3em;
+            margin: 0;
+        }
+        nav {
+            display: flex;
+            justify-content: center;
+            gap: 30px;
+            background-color: #34495e;
+            padding: 15px 0;
+        }
+        nav a {
+            color: white;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        nav a:hover {
+            text-decoration: underline;
+        }
+        .content {
+            max-width: 1200px;
+            margin: 40px auto;
+            padding: 0 20px;
+        }
+        .properties {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 20px;
+        }
+        .property {
+            background-color: white;
+            padding: 15px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+        footer {
+            background-color: #2c3e50;
+            color: white;
+            text-align: center;
+            padding: 20px 0;
+            margin-top: 40px;
+        }
+        .instagram {
+            margin-top: 10px;
+        }
+        .instagram a {
+            color: #fff;
+            font-weight: bold;
+            text-decoration: none;
+            background-color: #e4405f;
+            padding: 8px 15px;
+            border-radius: 5px;
+        }
+        .instagram a:hover {
+            background-color: #d32f4c;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <h1>VadiEmlakOffical</h1>
-        <div class="instagram">
-            <a href="https://www.instagram.com/vadiemlakoffical/?hl=tr" target="_blank">Instagram Hesabımız</a>
-        </div>
-    </header>
-    <nav>
-        <a href="#home">Ana Sayfa</a>
-        <a href="#about">Hakkımızda</a>
-        <a href="#properties">Emlaklar</a>
-        <a href="#contact">İletişim</a>
-    </nav>
-    <section class="content" id="about">
-        <h2>Hakkımızda</h2>
-        <p>Vadi Emlak olarak, müşterilerimize en iyi hizmeti sunuyor ve hayallerindeki evi bulmalarına yardımcı oluyoruz. Satılık ve kiralık konutlar için doğru adres.</p>
-    </section>
-    <section class="content" id="properties">
-        <h2>Satılık/Kiralık Emlaklar</h2>
-        <div class="properties">
-            <div class="property">
-                <h3>3+1 Daire</h3>
-                <p>Fiyat: 2.500.000₺</p>
-            </div>
-            <div class="property">
-                <h3>2+1 Daire</h3>
-                <p>Fiyat: 1.800.000₺</p>
-            </div>
-            <div class="property">
-                <h3>Villa</h3>
-                <p>Fiyat: 5.200.000₺</p>
-            </div>
-        </div>
-    </section>
-    <section class="content" id="contact">
-        <h2>İletişim</h2>
-        <p>Email: info@vadiemlak.com</p>
-        <p>Telefon: 0 (555) 578 48 19</p>
-        <p>Adres: İstanbul, Türkiye</p>
-    </section>
-    <footer>
-        &copy; 2025 Vadi Emlak. Tüm hakları saklıdır.
-    </footer>
+    <header>
+        <h1>VadiEmlakOffical</h1>
+        <div class="instagram">
+            <a href="https://www.instagram.com/vadiemlakoffical/?hl=tr" target="_blank">Instagram Hesabımız</a>
+        </div>
+    </header>
+    <nav>
+        <a href="#home">Ana Sayfa</a>
+        <a href="#about">Hakkımızda</a>
+        <a href="#properties">Emlaklar</a>
+        <a href="#contact">İletişim</a>
+    </nav>
+    <section class="content" id="about">
+        <h2>Hakkımızda</h2>
+        <p>Vadi Emlak olarak, müşterilerimize en iyi hizmeti sunuyor ve hayallerindeki evi bulmalarına yardımcı oluyoruz. Satılık ve kiralık konutlar için doğru adres.</p>
+    </section>
+    <section class="content" id="properties">
+        <h2>Satılık/Kiralık Emlaklar</h2>
+        <div class="properties">
+            <div class="property">
+                <h3>3+1 Daire</h3>
+                <p>Fiyat: 2.500.000₺</p>
+            </div>
+            <div class="property">
+                <h3>2+1 Daire</h3>
+                <p>Fiyat: 1.800.000₺</p>
+            </div>
+            <div class="property">
+                <h3>Villa</h3>
+                <p>Fiyat: 5.200.000₺</p>
+            </div>
+        </div>
+    </section>
+    <section class="content" id="contact">
+        <h2>İletişim</h2>
+        <p>Email: info@vadiemlak.com</p>
+        <p>Telefon: 0 (555) 578 48 19</p>
+        <p>Adres: İstanbul, Türkiye</p>
+    </section>
+    <footer>
+        &copy; 2025 Vadi Emlak. Tüm hakları saklıdır.
+    </footer>
 </body>
-</html> boyle değilmi
+</html>
