--- a/index.html
+++ b/index.html
@@ -56,6 +56,13 @@
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0,0,0,0.1);
         }
+        /* GÖRSEL STİLİ */
+        .property img { 
+            width: 100%; 
+            height: auto;
+            border-radius: 5px;
+            margin-bottom: 10px;
+        }
         footer {
             background-color: #2c3e50;
             color: white;
@@ -100,6 +107,8 @@
         <h2>Satılık/Kiralık Emlaklar</h2>
         <div class="properties">
             <div class="property">
+                <img src="https://via.placeholder.com/300x200?text=3%2B1+Daire+Görseli" alt="3+1 Daire Görseli">
+                
                 <h3>3+1 Daire</h3>
                 <p>Fiyat: 2.500.000₺</p>
             </div>
