--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <header>
         <h1>VadiEmlakOffical</h1>
         <div class="instagram">
-            <a href="https://www.instagram.com/se_lim8471/?hl=tr" target="_blank">Instagram Hesabımız</a>
+            <a href="https://www.instagram.com/xx.yavuz34/?hl=tr" target="_blank">Instagram Hesabımız</a>
         </div>
     </header>
     <nav>
