--- a/index.html
+++ b/index.html
@@ -84,13 +84,25 @@
         .instagram a:hover {
             background-color: #d32f4c;
         }
+        /* ADMIN BUTON STİLİ */
+        .admin-login a {
+            color: #fff; 
+            font-weight: bold; 
+            text-decoration: none; 
+            background-color: #3498db; 
+            padding: 8px 15px; 
+            border-radius: 5px;
+        }
     </style>
 </head>
 <body>
     <header>
         <h1>VadiEmlakOffical</h1>
         <div class="instagram">
-            <a href="https://www.instagram.com/xx.yavuz34/?hl=tr" target="_blank">Instagram Hesabımız</a>
+            <a href="https://www.instagram.com/vadiemlakoffical/?hl=tr" target="_blank">Instagram Hesabımız</a>
+        </div>
+        <div class="admin-login" style="margin-top: 10px;">
+            <a href="admin.html">Admin Girişi (Görüntüle)</a>
         </div>
     </header>
     <nav>
@@ -107,16 +119,18 @@
         <h2>Satılık/Kiralık Emlaklar</h2>
         <div class="properties">
             <div class="property">
-                <img src="https://via.placeholder.com/300x200?text=3%2B1+Daire+Görseli" alt="3+1 Daire Görseli">
+                <img src="https://via.placeholder.com/300x200?text=3%2B1+Apartment" alt="3+1 Daire Görseli">
                 
                 <h3>3+1 Daire</h3>
                 <p>Fiyat: 2.500.000₺</p>
             </div>
             <div class="property">
+                <img src="https://via.placeholder.com/300x200?text=2%2B1+Apartment" alt="2+1 Daire Görseli">
                 <h3>2+1 Daire</h3>
                 <p>Fiyat: 1.800.000₺</p>
             </div>
             <div class="property">
+                <img src="https://via.placeholder.com/300x200?text=Villa" alt="Villa Görseli">
                 <h3>Villa</h3>
                 <p>Fiyat: 5.200.000₺</p>
             </div>
@@ -125,7 +139,7 @@
     <section class="content" id="contact">
         <h2>İletişim</h2>
         <p>Email: info@vadiemlak.com</p>
-        <p>Telefon: 0 (547) 578 48 19</p>
+        <p>Telefon: 0 (555) 578 48 19</p>
         <p>Adres: İstanbul, Türkiye</p>
     </section>
     <footer>
