--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
         .instagram a:hover {
             background-color: #d32f4c;
         }
+        /* Admin butonu ve stili tamamen kaldırıldı */
     </style>
 </head>
 <body>
@@ -92,7 +93,7 @@
         <div class="instagram">
             <a href="https://www.instagram.com/vadiemlakoffical/?hl=tr" target="_blank">Instagram Hesabımız</a>
         </div>
-        </header>
+    </header>
     <nav>
         <a href="#home">Ana Sayfa</a>
         <a href="#about">Hakkımızda</a>
@@ -132,6 +133,8 @@
     </section>
     <footer>
         &copy; 2025 Vadi Emlak. Tüm hakları saklıdır.
-        </footer>
+        <br>
+        <span style="font-size: 0.8em; color: #ccc;">Alper'in Katkılarıyla</span>
+    </footer>
 </body>
 </html>
