--- a/index.html
+++ b/index.html
@@ -15,51 +15,16 @@
             padding: 0;
             background-color: #f5f5f5;
         }
-
-        /* Video Arkaplanı Stilleri */
-        .video-background {
-            position: relative;
-            width: 100%;
-            height: 60vh; /* Ekran yüksekliğinin %60'ı */
-            overflow: hidden;
-            background-color: #2c3e50; /* Video yüklenmezse veya mobilse alternatif arka plan */
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        #myVideo {
-            position: absolute;
-            right: 0;
-            bottom: 0;
-            min-width: 100%;
-            min-height: 100%;
-            width: auto;
-            height: auto;
-            z-index: -1; /* İçeriğin arkasında kalması için */
-            background-size: cover;
-            filter: brightness(60%); /* Videoyu biraz karartır */
-        }
-
-        .header-content {
-            position: relative;
-            z-index: 1; /* İçeriğin videonun önünde olması için */
-            text-align: center;
+        header {
+            background-color: #2c3e50;
             color: white;
+            padding: 40px 0;
+            text-align: center;
         }
-
-        /* Eski header stillerini geçersiz kıl ve video üzerine ayarla */
-        header { 
-            padding: 0;
-            background-color: transparent;
-        }
-        header h1 { 
-            font-size: 4em;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
+        header h1 {
+            font-size: 3em;
             margin: 0;
         }
-
-
         nav {
             display: flex;
             justify-content: center;
@@ -91,7 +56,7 @@
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0,0,0,0.1);
         }
-        /* GÖRSEL STİLİ (Yer tutucular için) */
+        /* GÖRSEL STİLİ */
         .property img { 
             width: 100%; 
             height: auto;
@@ -110,3 +75,65 @@
         }
         .instagram a {
             color: #fff;
+            font-weight: bold;
+            text-decoration: none;
+            background-color: #e4405f;
+            padding: 8px 15px;
+            border-radius: 5px;
+        }
+        .instagram a:hover {
+            background-color: #d32f4c;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>VadiEmlakOffical</h1>
+        <div class="instagram">
+            <a href="https://www.instagram.com/vadiemlakoffical/?hl=tr" target="_blank">Instagram Hesabımız</a>
+        </div>
+        </header>
+    <nav>
+        <a href="#home">Ana Sayfa</a>
+        <a href="#about">Hakkımızda</a>
+        <a href="#properties">Emlaklar</a>
+        <a href="#contact">İletişim</a>
+    </nav>
+    <section class="content" id="about">
+        <h2>Hakkımızda</h2>
+        <p>Vadi Emlak olarak, müşterilerimize en iyi hizmeti sunuyor ve hayallerindeki evi bulmalarına yardımcı oluyoruz. Satılık ve kiralık konutlar için doğru adres.</p>
+    </section>
+    <section class="content" id="properties">
+        <h2>Satılık/Kiralık Emlaklar</h2>
+        <div class="properties">
+            <div class="property">
+                <img src="https://via.placeholder.com/300x200?text=3%2B1+Apartment" alt="3+1 Daire Görseli">
+                
+                <h3>3+1 Daire</h3>
+                <p>Fiyat: 2.500.000₺</p>
+            </div>
+            <div class="property">
+                <img src="https://via.placeholder.com/300x200?text=2%2B1+Apartment" alt="2+1 Daire Görseli">
+                <h3>2+1 Daire</h3>
+                <p>Fiyat: 1.800.000₺</p>
+            </div>
+            <div class="property">
+                <img src="https://via.placeholder.com/300x200?text=Villa" alt="Villa Görseli">
+                <h3>Villa</h3>
+                <p>Fiyat: 5.200.000₺</p>
+            </div>
+        </div>
+    </section>
+    <section class="content" id="contact">
+        <h2>İletişim</h2>
+        <p>Email: info@vadiemlak.com</p>
+        <p>Telefon: 0 (555) 578 48 19</p>
+        <p>Adres: İstanbul, Türkiye</p>
+    </section>
+    <footer>
+        &copy; 2025 Vadi Emlak. Tüm hakları saklıdır.
+        <br>
+        <span style="font-size: 0.8em; color: #ccc;">Alper'in Katkılarıyla</span>
+    </footer>
+</body>
+</html>
