--- a/index.html
+++ b/index.html
@@ -15,16 +15,47 @@
             padding: 0;
             background-color: #f5f5f5;
         }
-        header {
+
+        /* Video Arkaplanı Stilleri */
+        .video-background {
+            position: relative;
+            width: 100%;
+            height: 60vh; /* Ekran yüksekliğinin %60'ı */
+            overflow: hidden;
             background-color: #2c3e50;
-            color: white;
-            padding: 40px 0;
-            text-align: center;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 0;
         }
-        header h1 {
-            font-size: 3em;
+
+        #myVideo {
+            position: absolute;
+            right: 0;
+            bottom: 0;
+            min-width: 100%;
+            min-height: 100%;
+            width: auto;
+            height: auto;
+            z-index: -1; 
+            background-size: cover;
+            filter: brightness(60%); /* Videoyu karartma */
+        }
+
+        .header-content {
+            position: relative;
+            z-index: 1; 
+            text-align: center;
+            color: white;
+        }
+
+        /* Başlık stili */
+        .video-background h1 { 
+            font-size: 4em;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
             margin: 0;
         }
+
         nav {
             display: flex;
             justify-content: center;
@@ -87,12 +118,19 @@
     </style>
 </head>
 <body>
-    <header>
-        <h1>VadiEmlakOffical</h1>
-        <div class="instagram">
-            <a href="https://www.instagram.com/vadiemlakoffical/?hl=tr" target="_blank">Instagram Hesabımız</a>
+    
+    <header class="video-background">
+        <video autoplay muted loop id="myVideo">
+            <source src="images/background.mp4" type="video/mp4">
+            Tarayıcınız video etiketini desteklemiyor.
+        </video>
+        <div class="header-content">
+            <h1>VadiEmlakOffical</h1>
+            <div class="instagram">
+                <a href="https://www.instagram.com/vadiemlakoffical/?hl=tr" target="_blank">Instagram Hesabımız</a>
+            </div>
         </div>
-        </header>
+    </header>
     <nav>
         <a href="#home">Ana Sayfa</a>
         <a href="#about">Hakkımızda</a>
@@ -107,7 +145,7 @@
         <h2>Satılık/Kiralık Emlaklar</h2>
         <div class="properties">
             <div class="property">
-                <img src="https://via.placeholder.com/300x200?text=3%2B1+Apartment" alt="3+1 Daire Görseli">
+                <img src="https://via.placeholder.com/300x200?text=3%2B1+Apartment" alt="3+1 Daire Görseli"> 
                 
                 <h3>3+1 Daire</h3>
                 <p>Fiyat: 2.500.000₺</p>
