--- a/index.html
+++ b/index.html
@@ -133,7 +133,4 @@
     <footer>
         &copy; 2025 Vadi Emlak. Tüm hakları saklıdır.
         <br>
-        <span style="font-size: 0.8em; color: #ccc;">Alper'in Katkılarıyla</span>
-    </footer>
-</body>
-</html>
+        <span style="font-size:
